# Reworld_AI_SDR_Project

./: .dockerignore  .gitignore  Company_name_enriched.csv  Company_name_updated.csv  Dockerfile  Final_leads_Updated.csv  Reworld_OSM_Chemical_Facilities.csv  Reworld_OSM_Chemical_FacilitiesV1.csv  Reworld_OSM_Chemical_FacilitiesV2.csv  Reworld_OSM_Chemical_FacilitiesV3.csv  TEST_OSM_ALL_INUSTRY.csv  apollo_results_only.csv  constants.py  docker-compose.yml  enriched_factories.csv  logger.py  main.py  osm_industry_results_chunked.csv  pyproject.toml  rcra_facilities.csv  structure.md
OSM/: OSM_Enrichment.py
Research_View_enhancement_modules/: ehance_research_data.py  prepare_final_master.py
SQL/: add_primary_key_to_frs_master.sql  alter_frs_master.sql  create_frs_master.sql  drop_frs_master.sql  enrich_landfill.sql  init_frs_master_data.sql  upsert_frs_master_data.sql
SQL_RUN/: run_frs_pipeline.py
data/: Reworld_facilities__US_and_CA.csv
database/db_utils/: connection.py  schema.py
processing_modules/: Get_EPA_Data.py  enrich_leads.py  process_df.py  test.py  test_response.json
utils/: bbounding_boxes.py
